--- a/style.css
+++ b/style.css
@@ -75,12 +75,29 @@ span{
     box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.7);
     padding: 4rem;
     margin: 1rem 0;
+    z-index: -2;
 }
 .card-header{
     display: grid;
     grid-template-columns: 56px calc(100% - 56px);
     align-items: center;
     column-gap: 1rem;
+}
+.comillas{
+    position: relative;
+}
+.comillas::after{
+    content: '';
+    display: block;
+    width: 140px;
+    height: 140px;
+    left: 40rem;
+    top: -4rem;
+    background-position: center center;
+    background-size: cover;
+    z-index: -1;
+    position: absolute;
+    background-image: url(images/bg-pattern-quotation.svg);
 }
 @media (min-width: 980px) {
     .card{
